@@ -43,6 +43,12 @@ INCOMPATIBILITY. Use partial_function instead.
 subscripted form x\<^isub>1, y\<^isub>2\<^isub>3.
 
 
+*** ML ***
+
+* Path.print is the official way to show file-system paths to users
+(including quotes etc.).
+
+
 
 New in Isabelle2011 (January 2011)
 ----------------------------------
